# stark

./: .gitattributes  .gitignore  AUTHORS  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Makefile  README.md  REUSE.toml  rust-toolchain.toml
LICENSES/: LicenseRef-STARK-Notices.txt  LicenseRef-STARK-Trademarks.txt
docs/: CONTRIB_src.org  README_src.org  checks.org  overview.md  overview.org
docs/sail/: eval_logic.txt  threads.org
examples/: mult-tail.sl  mult-while.sl  test.sl
misc/: CONTRIBUTING.org  README.org  README_src.org  eval_logic.txt
scripts/: ctxt.sl  main.sl  prot_line_rec.sl  rndr.sl
src/: context.rs  graphics.rs  lib.rs  main.rs  sail.rs
src/graphics/: mod.rs  text.rs
src/graphics/shaders/: lines.frag  lines.vert  test.frag
src/sail/: core.rs  eval.rs  lines.sl  memmgt.rs  mod.rs  parser.rs  queue.rs  stdenv.rs  symtab.rs  thread.rs  types.rs
src/shaders/: test.frag  test.vert
tools/: g-api.sh  set-backend.sh
