[package]
name = "stark"
version = "0.2.0-dev"
authors = ["Matthew Rothlisberger <mattjrothlis@gmail.com>"]
edition = "2021"

[features]
memdbg = []
stkdbg = []

[dependencies]
winit = { path = "../winit" }

ash = { version = "0.37", features = ["linked"] }
ash-window = "0.12"
raw-window-handle = "0.5"
shaderc = "0.8"

png = "0.17"
ttf-parser = "0.17"

log = "0.4"
simple_logger = "2.3"
