# SPDX-FileCopyrightText: © 2020 Matthew Rothlisberger
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "stark"
version = "0.2.0-dev"
authors = ["Matthew Rothlisberger <mattjrothlis@gmail.com>"]
edition = "2021"

[features]
# intensive Sail memory debugging
memdbg = []
# Sail stack debug readouts
stkdbg = []

[dependencies]
# winit = { path = "../winit", features = ["rwh_05"] }
winit = { version = "0.29", features = ["rwh_05"] }

ash = { version = "0.37", features = ["linked"] }
ash-window = "0.12"
raw-window-handle = "0.5"
shaderc = "0.8"

png = "0.17"
ttf-parser = "0.20"

log = "0.4"
simple_logger = "4.3"
