# SPDX-FileCopyrightText: © 2020 Matthew Rothlisberger
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "stark"
version = "0.2.0-dev"
authors = ["Matthew Rothlisberger <mattjrothlis@gmail.com>"]
edition = "2021"

[features]
# intensive Sail memory debugging
memdbg = []
# Sail stack debug readouts
stkdbg = []

[dependencies]
winit = { version = "0.30", features = ["rwh_06"] }

ash = { version = "0.38", features = ["linked"] }
ash-window = "0.13"
raw-window-handle = "0.6"

shaderc = "0.8"
ttf-parser = "0.25"

log = "0.4"
simple_logger = "5"

png = "0.17"
